*Empty MediaWiki Message*

--- a/Ukrain_tili.mw
+++ b/Ukrain_tili.mw
@@ -1,5 +1,7 @@
 '''Ukrain tili''' (ukraince ''українська мова'') - şarqiy [[Slavân tilleri|slavân]] gruppasından bir tildir, [[Ukraina|Ukrainanıñ]] resmiy tili.
 
+* [http://www.funkyukrainian.com Learn Ukrainian Language Phrases] - дидактические материалы, в том числе бесплатный словарь-аудио (по-английски).]
+
 {{Slavân tilleri}}
 
 [[Kategoriya:Slavân tilleri]]
