--- a/Ubuntu.mw
+++ b/Ubuntu.mw
@@ -1,7 +1,7 @@
-'''Ubuntu''' is a [[Linux]] Distribution.
+'''Ubuntu''' bir [[Linux]] darqatımı versiyasıdır.
 [[Image:Ubuntu full logo.png|thumb]]
 [[Image:Ubuntu 8.04.png|220px|thumb|right|ubuntu 8.04]]
 
 *[http://www.ubuntu.com/ www.ubuntu.com]
-*[http://cdimage.ubuntu.com/daily-live/current/ download ubuntu]
+*[http://cdimage.ubuntu.com/daily-live/current/ ubuntu indir]
 {{stub}}
