*Empty MediaWiki Message*

--- a/Sürgünlik.mw
+++ b/Sürgünlik.mw
@@ -1,4 +1,4 @@
-'''Qırımtatar Sürgüni''' 1944 senesi mayıs 18 künü oldı.
+'''Qırımtatar sürgünligi''' 1944 senesi mayıs 18 künü oldı.
 
 == Sürgünniñ tarihiy sebepleri ==
 Qırımtatar halqınıñ vatandan bütünley sürgün etilgeniniñ esas sebepleri Rusiye devletiniñ Qırım Hanlığına nisbeten mürekkep munasebetlerinden başlana. Sabıq Altın Ordunıñ topraqlarına köz atqan Rusiye Qazan, Hacı Tarhan, Sibir hanlıqlarını, Noğay Ordusını ta XVI asırda zapt etti. Niayet, XVIII asırnıñ soñunda Rusiye İmperiyası Qırım Hanlığını da basıp almağa muvafaq oldı. Çar ükümeti Qırımnıñ tamır halqını yarımadadan bütünley sürip çıqarmaq siyasetini defalarca ömürge keçirmege ıntıldı, lâkin eñ soñı halqnı Qırımdan yavaş-yavaş sıqıp çıqarmaq qararına kelindi. İşte, böyle etip qırımtatar halqınıñ taqdirine “qara asır” peyda ola ki, şu yüz yıl devamında (1783 - 1883) halqnıñ sayısı 5-6 kere eksile.
