--- a/Sürgünlik.mw
+++ b/Sürgünlik.mw
@@ -1,6 +1,6 @@
 '''Qırımtatar sürgünligi''' 1944 senesi mayıs 18 künü oldı.
 
-== Sürgünniñ tarihiy sebepleri ==
+== Sürgünlikniñ tarihiy sebepleri ==
 Qırımtatar halqınıñ vatandan bütünley sürgün etilgeniniñ esas sebepleri Rusiye devletiniñ Qırım Hanlığına nisbeten mürekkep munasebetlerinden başlana. Sabıq Altın Ordunıñ topraqlarına köz atqan Rusiye Qazan, Hacı Tarhan, Sibir hanlıqlarını, Noğay Ordusını ta XVI asırda zapt etti. Niayet, XVIII asırnıñ soñunda Rusiye İmperiyası Qırım Hanlığını da basıp almağa muvafaq oldı. Çar ükümeti Qırımnıñ tamır halqını yarımadadan bütünley sürip çıqarmaq siyasetini defalarca ömürge keçirmege ıntıldı, lâkin eñ soñı halqnı Qırımdan yavaş-yavaş sıqıp çıqarmaq qararına kelindi. İşte, böyle etip qırımtatar halqınıñ taqdirine “qara asır” peyda ola ki, şu yüz yıl devamında (1783 - 1883) halqnıñ sayısı 5-6 kere eksile.
 
 Çar ükümetiniñ yıqıluvı ve Qırımda sovet akimiyetiniñ tizilüvi vaziyetni deñiştirmedi. Aksine, arbiy areketler, mallarnı tutıp aluvlar, prodrazvörstka, 1921-1923 seneleriniñ açlığı, kolhozlaştıruv, siyasiy taqipler, Rusiyeden ve Ukrainadan pek çoq adamlarnıñ Qırımğa ketirilip yerleştirilüvi – bütün bular qırımtatar halqınıñ uquqsızlığını daa ziyade fenalaştıra ve onıñ sayısınıñ ket-kete eksilmesine alıp keldiler. 
@@ -8,16 +8,16 @@ Qırımtatar halqınıñ vatandan bütünley sürgün etilgeniniñ esas sebepler
 Sürgünlikni azırlav ve onı ömürge keçirüv. “Qırım – qırımtatarsız” ğayesini ömürge keçirmege ancaq sovetlerniñ kommunistik ükümeti cürat etti ve belsendi.
 
 
-== Sürgün  azırlav ==
+== Sürgünlikni  azırlav ==
 Bu ğayeni ömürge keçirmek içün ŞSCBnen Almaniya arasında cenk başlağanı imkân doğurdı. Qırımnıñ mudafaasındaki muvafaqiyetsizlik – o 1941 senesiniñ küzünde endi bütünley almanlar tarafından işğal etilgen edi, - partizan areketindeki yañlışlıqlar, Qırımnıñ rus ealisi tarafından “yat” halqlarğa nisbeten adeti üzere işançsızlığı, şübeli baquvı – bütün bular güya qırımtatarlar bir qalmay alman işğalcilerine berildiler, olarğa hızmet ettiler degen sahta, yalan fikirniñ doğmasına yardım ettiler. Qırımda partizan areketiniñ reberleri Aleksey Mokrousov ve A. Martınov 1942 senesi iyül ayında memleketniñ yolbaşçılığına “dağ ve dağ yanı rayonlarında yaşağan qırımtatarlarnıñ ekserisi faşistlerge berildiler”, degen yalan, iftira tolu mektüp ile muracaatta bulundılar.
 
 1944 senesi baarde daa yañı işğalcilerden temizlengen Qırımda İçki İşler Halq Komissarlığı (НКВД) ve Devlet Telükesizlik Halq Komissarlığı (НКГБ) tarafından “diyarnı antisovet unsurlardan temizlev” baanesi ile faal sürette çeşit tedbirler keçirildi. Qırımğa qoşma olaraq 20 biñ asker ketirildi. Mayıs 10-da Beriya Stalinge şöyle sözlernen muracaat ete: “Qırımtatarlarnıñ sovet halqına qarşı satqınlıq areketlerini esapqa alaraq ve qırımtatarlarnıñ ileride Şuralar Birliginiñ sıñır kenarında yaşaması istenilmegeninden kelip çıqıp. ŞSCB İİHK Siziñ baqımıñızğa Devlet Mudafaa Komitetiniñ  (ГКО) bütün tatarlarnı Qırımdan sürgün etmek qararınıñ leyhasını teklif ete”. 1944 senesi mayıs 11-de Stalinniñ imzasınen bütün qırımtatarlarnı Qırımdan Özbekistanğa sürgün etmek aqqında mahsus qarar çıqarıla. 1944 senesi mayıs 21-de çıqarılğan qararda ise olarnı Rusiyeniñ bazı vilâyetlerine yerleştirmek hususında kösteriş berile.
 
-Aprel ayında ve soñra mayısnıñ başında acele sürette qırımtatarlar eki kere esapqa alınalar. Mayıs 10-da iç bir şeyden şübelenmegen bir çoq dağ ve dağ yanı rayonlarında köylerniñ adamlarını yollarnı tamir işine aydadılar ve olar anda bir afta çalıştılar. Mayıs 18-de ise olarnı qorantalarınen, köyü-köyü ile tuvğan yurtlarından şu yollarnen aydap alıp kettiler. Sürgünlik arfesinde yani aprelde ve mayısnıñ birinci yarısında qırımtatarlar arasında bütün erkeklerni “trud armiya”ğa aluv kampaniyası ötkerildi. Soñundan añlaşılğanına köre, bunıñ sebebi – sürgünlük operatsiyasını ötkergende, olarğa qarşılıq adam olmaması közde tutulğan. “Trud armiya”ğa alınğan biñlernen adamlar esasen Rusiyeniñ şimalinde, Uralda ve diger yerlerindeki lagerlerge, Qazahistanğa yollanılğanlar. Olarnı esasen yol yapıcılığında, zavodlar qurucılığında, dağ işlerinde çalıştırğanlar ve olarğa pek qılınğanlar.
+Aprel ayında ve soñra mayısnıñ başında acele sürette qırımtatarlar eki kere esapqa alınalar. Mayıs 10-da iç bir şeyden şübelenmegen bir çoq dağ ve dağ yanı rayonlarında köylerniñ adamlarını yollarnı tamir işine aydadılar ve olar anda bir afta çalıştılar. Mayıs 18-de ise olarnı qorantalarınen, köyü-köyü ile tuvğan yurtlarından şu yollarnen aydap alıp kettiler. Sürgünlik arfesinde yani aprelde ve mayısnıñ birinci yarısında qırımtatarlar arasında bütün erkeklerni “trud armiya”ğa aluv kampaniyası ötkerildi. Soñundan añlaşılğanına köre, bunıñ sebebi – sürgünlik operatsiyasını ötkergende, olarğa qarşılıq adam olmaması közde tutulğan. “Trud armiya”ğa alınğan biñlernen adamlar esasen Rusiyeniñ şimalinde, Uralda ve diger yerlerindeki lagerlerge, Qazahistanğa yollanılğanlar. Olarnı esasen yol yapıcılığında, zavodlar qurucılığında, dağ işlerinde çalıştırğanlar ve olarğa pek qılınğanlar.
 Eger 1941 senesi cenk başlağanınen yapılğan umumiy mobilizatsiya qırımtatar qorantalarını olarnıñ esas tayançı olğan erkeklersiz qaldırğan olsa, alman işğali olarnıñ maddiy temelini bozğan olsa, “trud armiya” siyrek de olsa, qorantalarda qalğan erkeklerni ve ösmürlerni yığıştırıp aldı ki, üzere çoq balalı olğan qırımtatar qorantaları bir derece olsa da, olarğa bazana ediler. Şunıñ içün evlerinden yarı aç, yarı çıplaq aydalıp çıqarılğan qorantalar bu ceryanğa, bu faciağa endi zayıflanğan, çaresizlengen, iqtisadiy ve ruhiy ceetten sıqıştırılğan alda taşlandılar ve sürgünlikniñ birinci yılları halqnıñ soñ derece qırılğanınıñ sebeplerinden biri de budır.
 Sürgün etigen qırımtatarlar baracaq cumhuriyetlerde olarnı qabul etmege belli bir azırlıq körümlikte edi. Meselâ, Beriya Özbekistan yolbaşçılarından “Özbekistan ŞSCde sürgün etilgenlerni qabul etmek ve olarnı yerleştirmek içün azırlıq işleri esasen bitirildi”, degen esabat aldı.
 
-== Sürgün ==
+== Sürgünlik ==
 1944 senesi mayıs 18 künü tañda qırımtatarlarnı sürip çıqaruv operatsiyası başlandı. Bu operatsiyada iştiraq etkenlerden biri A.Vesnin o vaqianı şöyle hatırlay: 
 {{cquote|
 ...1944 senesi mayıs 9-da bizim arbiy qısmımız “liter” eşelonınen yani bir toqtamayıp, Qırımğa keldi... Mayıs 17 gecesi bizni acele sürette ayaqqa tursattılar ve çöller içinden bir qaç saat cayav kettik. Saat 3-ni 30 daqqa keçkende Oysul köyüne kelip çıqtıq ve tek bu yerde bizim mında kelgenimizniñ sebebini – tatarlarını sürgün etecegimizni ayttılar. Köy sarılıp alındı ve qol pulemötçıları köyniñ dört tarafında yerleştiler, qalğanlar ise serjant ve zabitler ya da “operativnik”ler ile üçer-üçer olıp köy içine dağıldıq. Operatsiya tamam saba saat 4-te başlandı. Biz evlerge kirip: “Sovet akimiyeti adından! Vatanğa satqınlıq yapqanıñız içün siz Şuralar Birliginiñ başqa rayonlarına sürgün etilesiñiz”, dedik. Operatsiya keregi kibi azırlanğan: köyge o qadar amerikan Ford maşnaları kelip kirdi ki, olar köyniñ bütün ealisini bir kereden eñ yaqın demiryol stantsiyasına alıp kettiler... Beklenilmegen bu şeyden aqlına zarar kelgen bir qartiy birden çöl tarafqa qaçmağa başladı ve şu yerde pulemöt qurşunları onı yerge serdiler. Daa eki kün evel hastahaneden evine qaytıp kelgen uquqını talap etken ayaqsız saqat tatar askerini süyrep alıp ketip çuval kibi maşnağa yuvarlattılar... Olarğa azırlanmağa 20 daqqa vaqıt berildi – ya qolunen ne qadar şey alıp olursıñ. Bunıñ üstüne de, kim öz uçastkasını tez bitirir dep, gruppalar arasında yarış ötkerildi...
