*Empty MediaWiki Message*

--- a/Qırım_tarihı.mw
+++ b/Qırım_tarihı.mw
@@ -196,11 +196,11 @@ Moskva knâzlığınıñ Qazan ve Hacı Tarhanğa yapqan ücüm etüv siyasetine
 
 Sekiz qırımtatar [[Şuralar Birliginiñ Qaramanı]] unvanını aldı, olardan [[Amethan Sultan]] eki defa qaraman oldı.
 
-== [[Sürgün]] ve sürgünden soñ devri ==
+== [[Sürgünlik]] ve sürgünlikten soñ devri ==
 
 [[1944 senesi]], [[mayıs 11]]. [[İosif Stalin]] Devlet Mudafaa Komiteti (ГКО) №5859 “Qırımtatarlar aqqında” gizli qararnı imzaladı. Qararda qırımlarnı Qırımdan [[Özbekistan]]ğa köçürmek közde tutula edi. Qoşma olaraq 1944 senesi [[mayıs 21]]-de imzalanğan qarar boyunca qırımlarnı Rusiyeniñ bir qaç vilâyetine sürgün etmek közde tutuldı.
 
-[[1944]] senesi, [[mayıs 18]]. [[Sürgün]] künü. Saba erte qırımlarnı mecburiy alda köçirüv mahsus operatsiyası başlandı ve [[mayıs 20]]-de saat 16-da yekünlendi. İçki İşler Halq Komissarlığınıñ malümatlarına köre 191 014 qırımlar sürgün etildi, kommunistik fırqa menbalarına köre – 194 111 adam sürgünlikke oğratıldı. Cenkten soñ sürgün olunğanlarğa cenkten qaytqanlar (10 biñge yaqın) ve diger cumhuriyetlerde yaşağan qırımlar yollanıldı. Qırımtatar milliy areketiniñ malümatına köre 238 500 adam sürgün etildi.
+[[1944]] senesi, [[mayıs 18]]. [[Sürgünlik]] künü. Saba erte qırımlarnı mecburiy alda köçirüv mahsus operatsiyası başlandı ve [[mayıs 20]]-de saat 16-da yekünlendi. İçki İşler Halq Komissarlığınıñ malümatlarına köre 191 014 qırımlar sürgün etildi, kommunistik fırqa menbalarına köre – 194 111 adam sürgünlikke oğratıldı. Cenkten soñ sürgün olunğanlarğa cenkten qaytqanlar (10 biñge yaqın) ve diger cumhuriyetlerde yaşağan qırımlar yollanıldı. Qırımtatar milliy areketiniñ malümatına köre 238 500 adam sürgün etildi.
 
 1944 senesi, [[dekabr 14]]. [[RŞFSC]] Yuqarı Şurası “Qırım Muhtar Cumhuriyetindeki rayon ve rayon merkezleriniñ adlarını deñiştirüv” qararı qabul etildi. Bu ve başqa qararlar qırımlar medeniyetini ve tarihını yoq etmek içün çıqarılğan edi.
 
@@ -236,7 +236,7 @@ Sekiz qırımtatar [[Şuralar Birliginiñ Qaramanı]] unvanını aldı, olardan 
 1993 s., noyabr 27-29. Aqmescitte qırımlarnıñ II Qurultayınıñ (nevbetten tış) üçünci sessiyası oldı. 1994 senesi Yuqarı Şurağa ve Qırım Prezidentine ötkerilecek saylavlar muzakere etildi. Qurultay berilgen kvotalarnıñ sayısı az olğanını boynuna aldı ve bunıñnen beraber qırımlarnıñ parlament saylavlarında iştirakını maqsatqa uyğun dep tanıdı ve deputatlıqqa kandidatlarnıñ cedvelini tasdiqladı.
 
 1994 s., 27-mart. Qırımlar çoqluqnı teşkil etken milliy okruglarda Qırım Yuqarı Şurasına saylavlar otkerildi. Saylavlarda 102379 qırımlı iştirak etti. Qurultay tizgen cedvel içün saylavda iştirak etken vatandaşlarımıznıñ 89,3% qoltuttı. Şu sebepten yañı parlamentte Qurultaynıñ 14 vekili deputatlıq yerlerni aldı.
-1994 s., mayıs 18. Qırım halqı sürgüniñ 50-yıllığını qayd etti. Qırımnıñ bütün şeer ve köylerinde matem mitingler otkerildi. Aqmescit, Canköy, Bağçasaray, Süyren, Çoyunçı demiryol binalarında memorial tahtalar yerleştirildi. Aqmescit şeeriniñ merkeziy meydanında 25-biñlik miting oldı.
+1994 s., mayıs 18. Qırım halqı sürgünlikniñ 50-yıllığını qayd etti. Qırımnıñ bütün şeer ve köylerinde matem mitingler otkerildi. Aqmescit, Canköy, Bağçasaray, Süyren, Çoyunçı demiryol binalarında memorial tahtalar yerleştirildi. Aqmescit şeeriniñ merkeziy meydanında 25-biñlik miting oldı.
 
 1994 s., dekabr. Qırımğa 200000-den ziyade qırımlı avdet oldı.
 1995 s., noyabr 18. Aqmescitte Qırım musulmanlarınıñ I Qurultayı oldı.
