--- a/Donald_Tusk.mw
+++ b/Donald_Tusk.mw
@@ -2,7 +2,7 @@
 
 [[Kategoriya:Lehistan]]
 [[Kategoriya:Siyasetçiler]]
-
+[[Kategoriya:1957 senesinde doğğanlar]]
 [[be-x-old:Дональд Туск]]
 [[br:Donald Tusk]]
 [[cs:Donald Tusk]]
