--- a/İsmail_Gasprinskiy.mw
+++ b/İsmail_Gasprinskiy.mw
@@ -76,6 +76,8 @@ Bediiy icadını [[1887 senesi]] “Frenkistan mektüpleri”, “Dar ür-Rahat 
 [[Kategoriya:Cemaat erbapları]]
 [[Kategoriya:Medeniyet erbapları]]
 [[Kategoriya:Yazıcılar]]
+[[Kategoriya:1851 senesinde doğğanlar]]
+[[Kategoriya:1914 senesinde ölgenler]]
 
 [[ar:إسماعيل كسبرالي]]
 [[az:İsmayıl Qaspiralı]]
