--- a/Ahmed_İhsan_Qırımlı.mw
+++ b/Ahmed_İhsan_Qırımlı.mw
@@ -6,5 +6,6 @@ Dr. Ahmed İhsan Kırımlınıñ büyük qartbabası, [[Bağçasaray]]lı Ulema-
 
 {{DEFAULTSORT:Kırımlı, Ahmed İhsan}}
 [[Kategoriya:Cemaat erbapları]]
+[[Kategoriya:1258 senesinde doğğanlar]]
 
 [[tr:Ahmed İhsan Kırımlı]]
