--- a/Seid_Abdulla_Özenbaşlı.mw
+++ b/Seid_Abdulla_Özenbaşlı.mw
@@ -12,3 +12,5 @@
 {{DEFAULTSORT:Özenbaşlı, Seyid Abdulla}}
 [[Kategoriya:Yazıcılar]]
 [[Kategoriya:Cemaat erbapları]]
+[[Kategoriya:1867 senesinde doğğanlar]]
+[[Kategoriya:1924 senesinde ölgenler]]
