--- a/Müstecib_Ülküsal.mw
+++ b/Müstecib_Ülküsal.mw
@@ -47,6 +47,6 @@ Müstecib Ülküsal aqqında neşir etilgen pek coq maqale bardır.
 [[Kategoriya:Türkiyedeki Qırımtatar diasporası]]
 [[Kategoriya:Cemaat erbapları]]
 [[Kategoriya:Yazıcılar]]
-
-
+[[Kategoriya:1899 senesinde doğğanlar]]
+[[Kategoriya:1996 senesinde ölgenler]]
 [[tr:Müstecib Ülküsal]]
