--- a/Naciye_Ametova.mw
+++ b/Naciye_Ametova.mw
@@ -13,3 +13,4 @@ Birinci şiiri “Balqurtçıq” 1975 senesi “Lenin Bayrağı” gazetasında
 
 {{DEFAULTSORT:Ametova, Naciye}}
 [[Kategoriya:Yazıcılar]]
+[[Kategoriya:1959 senesinde doğğanlar]]
