--- a/Mennan_Camanaqlı.mw
+++ b/Mennan_Camanaqlı.mw
@@ -6,3 +6,5 @@ Mennan Reşidov 1916 senesi [[Camanaq]] köyünde (şimdiki [[Aqşeyh rayonı]])
 {{DEFAULTSORT:Camanaqlı, Mennan}}
 [[Kategoriya:II Cian cenki qaramanları]]
 [[Kategoriya:Yazıcılar]]
+[[Kategoriya:1916 senesinde doğğanlar]]
+[[Kategoriya:1942 senesinde ölgenler]]
