--- a/Cengiz_Dağcı.mw
+++ b/Cengiz_Dağcı.mw
@@ -43,6 +43,8 @@ Londonda Dağcı elindeki qalemine can bağışlamağa  tırışa ve [[1947]]–
 
 {{DEFAULTSORT:Dağcı, Cengiz}}
 [[Kategoriya:Yazıcılar]]
+[[Kategoriya:1920 senesinde doğğanlar]]
+
 
 [[tr:Cengiz Dağcı]]
 [[tt:Cengiz Dağcı]]
