--- a/Mamut_Dibağ.mw
+++ b/Mamut_Dibağ.mw
@@ -8,3 +8,5 @@ Mamut Dibağ senesi [[Bağçasarayda]] doğdı. Gazeta ve mecmua redaktsiyaları
 {{DEFAULTSORT:Dibağ, Mamut}}
 [[Kategoriya:II Cian cenki qaramanları]]
 [[Kategoriya:Yazıcılar]]
+[[Kategoriya:1905 senesinde doğğanlar]]
+[[Kategoriya:1942 senesinde ölgenler]]
