--- a/Irğat_Qadır.mw
+++ b/Irğat_Qadır.mw
@@ -6,3 +6,5 @@ Ulu Vatan cenki başlağanınen cebege ketti. Gvardiya üyken leytenantı olıp 
 
 [[Kategoriya:II Cian cenki qaramanları]]
 [[Kategoriya:Yazıcılar]]
+[[Kategoriya:1905 senesinde doğğanlar]]
+[[Kategoriya:1945 senesinde ölgenler]]
