--- a/Abibulla_Odabaş.mw
+++ b/Abibulla_Odabaş.mw
@@ -15,3 +15,5 @@ Abibulla Odabaş 1928 sеnеsi oktâbr 26-da [[Cеlâl Mеinov]], [[Amdi Gerayba
 
 {{DEFAULTSORT:Odabaş, Abibulla}}
 [[Kategoriya:Yazıcılar]]
+[[Kategoriya:1891 senesinde doğğanlar]]
+[[Kategoriya:1938 senesinde ölgenler]]
