--- a/Yunus_Qandım.mw
+++ b/Yunus_Qandım.mw
@@ -16,3 +16,5 @@ Yunus Qandım 2005 sеnеsiniñ mart 20-dе vefat etti.
 
 {{DEFAULTSORT:Qandım, Yunus}}
 [[Kategoriya:Yazıcılar]]
+[[Kategoriya:1959 senesinde doğğanlar]]
+[[Kategoriya:2005 senesinde ölgenler]]
