--- a/Memet_Sevdiyar.mw
+++ b/Memet_Sevdiyar.mw
@@ -24,3 +24,5 @@ Memet Sevdiyar Amerika Qoşma Ştatlarınıñ [[Nyu York]] şeerinde, 1999 senes
 
 {{DEFAULTSORT:Sevdiyar, Memet}}
 [[Kategoriya:Yazıcılar]]
+[[Kategoriya:1913 senesinde doğğanlar]]
+[[Kategoriya:1999 senesinde ölgenler]]
