--- a/Maqsud_Suleyman.mw
+++ b/Maqsud_Suleyman.mw
@@ -12,3 +12,5 @@ Ulu Vatan cenki vaqtında esirlikke tüşti. Qurtarılğandan soñ Vatanğa hiya
 {{DEFAULTSORT:Suleyman, Maqsud}}
 [[Kategoriya:II Cian cenki qaramanları]]
 [[Kategoriya:Yazıcılar]]
+[[Kategoriya:1909 senesinde doğğanlar]]
+[[Kategoriya:1953 senesinde ölgenler]]
