--- a/Üsein_Şamil_Toqtarğazı.mw
+++ b/Üsein_Şamil_Toqtarğazı.mw
@@ -6,3 +6,5 @@
 
 {{DEFAULTSORT:Toqtarğazı, Üsein Şamil}}
 [[Kategoriya:Yazıcılar]]
+[[Kategoriya:1881 senesinde doğğanlar]]
+[[Kategoriya:1913 senesinde ölgenler]]
