--- a/Bekir_Vaap.mw
+++ b/Bekir_Vaap.mw
@@ -6,3 +6,5 @@ Bekir Vaap 1915 senesi [[Bağçasaray rayonı]], [[Büyük Qaralez]] köyünde d
 {{DEFAULTSORT:Vaap, Bekir}}
 [[Kategoriya:II Cian cenki qaramanları]]
 [[Kategoriya:Yazıcılar]]
+[[Kategoriya:1915 senesinde doğğanlar]]
+[[Kategoriya:1944 senesinde ölgenler]]
