--- a/Tair_Üsein.mw
+++ b/Tair_Üsein.mw
@@ -8,3 +8,5 @@ Tair Üsein 1911 senesi [[Manğıt]] köyünde (şimdiki [[Seyitler rayоnı]]) 
 {{DEFAULTSORT:Üsein, Tair}}
 [[Kategoriya:II Cian cenki qaramanları]]
 [[Kategoriya:Yazıcılar]]
+[[Kategoriya:1911 senesinde doğğanlar]]
+[[Kategoriya:1942 senesinde ölgenler]]
