--- a/Ümer_İpçi.mw
+++ b/Ümer_İpçi.mw
@@ -42,3 +42,5 @@ Nеsir janrınıñ inkişafını ep dеvam ettirеrеk, Ümеr İpçi otuzıncı
 
 {{DEFAULTSORT:İpçi, Ümer}}
 [[Kategoriya:Yazıcılar]]
+[[Kategoriya:1897 senesinde doğğanlar]]
+[[Kategoriya:1955 senesinde ölgenler]]
