--- a/Ablây_Şamil.mw
+++ b/Ablây_Şamil.mw
@@ -8,3 +8,5 @@ Ulu Vatan cenki yıllarında, 1942 senesi, nemse faşist işğalcileri tarafınd
 {{DEFAULTSORT:Şamil, Ablây}}
 [[Kategoriya:II Cian cenki qaramanları]]
 [[Kategoriya:Yazıcılar]]
+[[Kategoriya:1900 senesinde doğğanlar]]
+[[Kategoriya:1942 senesinde ölgenler]]
