--- a/Alime_Abdennanova.mw
+++ b/Alime_Abdennanova.mw
@@ -11,3 +11,5 @@ Alime Abdennanova 1924 senesi [[Kerç]] şeerinde işçi qorantasında doğdı, 
 
 {{DEFAULTSORT:Abdennanova, Alime}}
 [[Kategoriya:II Cian cenki qaramanları]]
+[[Kategoriya:1924 senesinde doğğanlar]]
+[[Kategoriya:1944 senesinde ölgenler]]
