--- a/Teyfuq_Abdul.mw
+++ b/Teyfuq_Abdul.mw
@@ -11,3 +11,5 @@ Qırımtatar halqınıñ batır, cesür oğlu Teyfuq Abdulge 1943 senesi dekabr 
 
 {{DEFAULTSORT:Abdul, Teyfuq}}
 [[Kategoriya:II Cian cenki qaramanları]]
+[[Kategoriya:1915 senesinde doğğanlar]]
+[[Kategoriya:1945 senesinde ölgenler]]
