--- a/Üzeir_Abduramanov.mw
+++ b/Üzeir_Abduramanov.mw
@@ -7,3 +7,4 @@ Sapör Üzeir Abduramanov qattı uruşlarda özüni batır, cesür komandir olar
 
 {{DEFAULTSORT:Abdul, Teyfuq}}
 [[Kategoriya:II Cian cenki qaramanları]]
+[[Kategoriya:1916 senesinde doğğanlar]]
