--- a/Abdureim_Reşidov.mw
+++ b/Abdureim_Reşidov.mw
@@ -9,3 +9,4 @@ Abdureim Reşidov bombalayıcı ağır uçaqlar eskadrilyasınıñ komandiri edi
 
 {{DEFAULTSORT:Reşidov, Abdureim}}
 [[Kategoriya:II Cian cenki qaramanları]]
+[[Kategoriya:1912 senesinde doğğanlar]]
