--- a/Seyitnafe_Seyitveliyev.mw
+++ b/Seyitnafe_Seyitveliyev.mw
@@ -5,3 +5,4 @@ Seyitnafe Seyitveliyev 1919 senesi [[Qırım]]da, Zuya rayonınıñ [[Tav Qıpç
 
 {{DEFAULTSORT:Seyitveliyev, Seyitnafe}}
 [[Kategoriya:II Cian cenki qaramanları]]
+[[Kategoriya:1919 senesinde doğğanlar]]
