--- a/Amet-Han_Sultan.mw
+++ b/Amet-Han_Sultan.mw
@@ -22,6 +22,8 @@ Bugün [[Aqmescit]], [[Alupka]] ve [[Mahaçqala]] şeerleriniñ meydan ve sоqaq
 
 {{DEFAULTSORT:Sultan, Amethan}}
 [[Kategoriya:II Cian cenki qaramanları]]
+[[Kategoriya:1920 senesinde doğğanlar]]
+[[Kategoriya:1971 senesinde ölgenler]]
 
 [[de:Amet-Chan Sultan]]
 [[en:Amet-Han Sultan]]
