--- a/Osman_Asanov.mw
+++ b/Osman_Asanov.mw
@@ -27,3 +27,5 @@ Amansız ölüm acayip insannı, büyük istidat saibini aramızdan alıp ketti.
 
 {{DEFAULTSORT:Asanоv, Osman}}
 [[Kategoriya:Medeniyet erbapları]]
+[[Kategoriya:1923 senesinde doğğanlar]]
+[[Kategoriya:2005 senesinde ölgenler]]
