--- a/I_Hacı_Geray.mw
+++ b/I_Hacı_Geray.mw
@@ -17,7 +17,7 @@ Hacı Geray han 1466 s. vefat etti ve Qırq Yerniñ yanında [[Salaçıq]]ta def
 {{DEFAULTSORT:Hacı Geray 1}}
 
 [[Kategoriya:Qırım hanları]]
-
+[[Kategoriya:1466 senesinde ölgenler]]
 [[de:Hacı I. Giray]]
 [[en:Hacı I Giray]]
 [[fr:Haci Giray]]
