--- a/Şevqiy_Bektöre.mw
+++ b/Şevqiy_Bektöre.mw
@@ -32,3 +32,5 @@ Vefatından soñ, 1965 senesi Türkiyede "[[Edil]] Qızıl Aqarken" adınen Bekt
 
 {{DEFAULTSORT:Bektöre, Şevqiy}}
 [[Kategoriya:Şairler]]
+[[Kategoriya:1888 senesinde doğğanlar]]
+[[Kategoriya:1961 senesinde ölgenler]]
