--- a/Amdi_Giraybay.mw
+++ b/Amdi_Giraybay.mw
@@ -16,3 +16,5 @@ Amdi Geraybay qalemini dramaturgiya janrında da sınap baqqan edi. 1919 senesi 
 
 {{DEFAULTSORT:Geraybay, Amdi}}
 [[Kategoriya:Şairler]]
+[[Kategoriya:1901 senesinde doğğanlar]]
+[[Kategoriya:1930 senesinde ölgenler]]
