--- a/Çeslav_Miloş.mw
+++ b/Çeslav_Miloş.mw
@@ -4,6 +4,8 @@
 {{DEFAULTSORT:Miloş, Çeslav}}
 [[Kategoriya:Şairler]]
 [[Kategoriya:Lehistan]]
+[[Kategoriya:1911 senesinde doğğanlar]]
+[[Kategoriya:2004 senesinde ölgenler]]
 
 [[ar:تشيسلاف ميلوش]]
 [[bg:Чеслав Милош]]
