--- a/Remzi_Burnaş.mw
+++ b/Remzi_Burnaş.mw
@@ -16,3 +16,5 @@ Remzi Burnaş [[1982]] senesi, qızçığı altı yaşında ekende apansızdan v
 * [[Enver Tohtarov]], [[Kalgay Mecmuası]], sañ 36 
 
 [[Kategoriya:Şairler]]
+[[Kategoriya:1920 senesinde doğğanlar]]
+[[Kategoriya:1982 senesinde ölgenler]]
