--- a/Aşıq_Ümer.mw
+++ b/Aşıq_Ümer.mw
@@ -24,5 +24,7 @@ Aşıq Ümerniñ icadı halqımıznıñ edebiy ve medeniy variyetidir, qırımta
 
 {{DEFAULTSORT:Ümer, Aşıq}}
 [[Kategoriya:Şairler]]
+[[Kategoriya:1621 senesinde doğğanlar]]
+[[Kategoriya:1707 senesinde ölgenler]]
 
 [[tr:Aşık Ömer]]
