--- a/Eşref_Şemi-zade.mw
+++ b/Eşref_Şemi-zade.mw
@@ -26,3 +26,5 @@ Eşref Şemi-zadeniñ birinci şiirleri [[1923]] senesi matbuatta basılıp baş
 
 {{DEFAULTSORT:Şemi-zade, Eşref}}
 [[Kategoriya:Şairler]]
+[[Kategoriya:1908 senesinde doğğanlar]]
+[[Kategoriya:1978 senesinde ölgenler]]
