The file [[:Image:COA_of_Greece.svg]] has been replaced by [[:Image:Coat_of_arms_of_Greece.svg]] by administrator [[:commons:User:Siebrand]]: ''Was in category "Duplicate", exact duplicate''. ''[[m:User:CommonsDelinker|Translate me!]]''

--- a/Yunanistan.mw
+++ b/Yunanistan.mw
@@ -5,7 +5,7 @@
 |Resmiy Original adı =  Ελληνική Δημοκρατία
 |Resmiy Original adı translit =  Ellinikí Dhimokratía
 |Bayraq =  Flag of Greece.svg
-|Gerb =  COA of Greece.svg
+|Gerb =Coat_of_arms_of_Greece.svg
 |Harita =  EU location GRE.png
 |Şiar = Ελευθερία ή θάνατος
 |Şiar tercimesi = Azatlıq ya da ölüm 
