The file [[:Image:COA_of_Portugal.svg]] has been replaced by [[:Image:Coat_of_arms_of_Portugal.svg]] by administrator [[:commons:User:Siebrand]]: ''Was in category "Duplicate", exact duplicate''. ''[[m:User:CommonsDelinker|Translate me!]]''

--- a/Portugaliya.mw
+++ b/Portugaliya.mw
@@ -4,7 +4,7 @@
 |Original adı = Portugal
 |Resmiy Original adı =  República Portuguesa
 |Bayraq =  Flag of Portugal.svg
-|Gerb =  COA of Portugal.svg
+|Gerb =Coat_of_arms_of_Portugal.svg
 |Harita =  EU location POR.png
 |Gimn =  A Portuguesa
 |Til =  [[Portugal tili]]
