The file [[:Image:COA_of_Malta.svg]] has been replaced by [[:Image:Coat_of_arms_of_Malta.svg]] by administrator [[:commons:User:Siebrand]]: ''Was in category "Duplicate", exact duplicate''. ''[[m:User:CommonsDelinker|Translate me!]]''

--- a/Malta.mw
+++ b/Malta.mw
@@ -6,7 +6,7 @@
 |Resmiy Original adı = Ir-Repubblika ta' Malta
 |Resmiy Original adı 2 = Republic of Malta
 |Bayraq =  Flag of Malta.svg
-|Gerb =  COA of Malta.svg
+|Gerb =Coat_of_arms_of_Malta.svg
 |Harita =  EU location MLT.png
 |Gimn = L-Innu Malti
 |Gimn tercimesi = Malta gimni
