--- a/İsrail.mw
+++ b/İsrail.mw
@@ -4,7 +4,7 @@
  |Original adı = מדינת ישראל <br><small>/Medīnat Yisrā'el/</small>
  |Original adı 2 = دولة إسرائيل <br><small>/Dawlat Isrā'īl/</small>
  |Bayraq =  Flag of Israel.svg
- |Gerb = COA of Israel.svg
+ |Gerb =Coat_of_arms_of_Israel.svg
  |Harita =  LocationIsrael.svg
  |Gimn = Ha Tikva
  |Gimn tercimesi = Ümüt
