--- a/Argentina.mw
+++ b/Argentina.mw
@@ -8,7 +8,7 @@
 |Gimn =  Himno Nacional Argentino
 |Gimn tercimesi= Argentina milliy gimni
 |Bayraq =  Flag of Argentina.svg
-|Gerb =  COA of Argentina.svg
+|Gerb =Coat_of_arms_of_Argentina.svg
 |Harita =  LocationArgentina.svg
 |Paytaht =  [[Buenos Ayres|Buenos Ayres]]
 |Eñ balaban şeerler =  [[Buenos Ayres|Buenos Ayres]], [[Kordoba]], [[Rosario]], [[Mendosa]]
