*Empty MediaWiki Message*

--- a/Recep_Tayyip_Erdoğan.mw
+++ b/Recep_Tayyip_Erdoğan.mw
@@ -1,1 +1,1 @@
-Türkiye Cumhuriyeti'nin Başbakanı ve 59.hükümeti Adalet ve Kalkınma Partisi (Ak Parti) Hükümetinin genel başbanıdır.
+Türkiye Cumhuriyeti'nin Başbakanı ve 59.hükümeti Adalet ve Kalkınma Partisi (Ak Parti) Hükümetinin genel başkanıdır.
