*Empty MediaWiki Message*

--- a/Abdullah_Gül.mw
+++ b/Abdullah_Gül.mw
@@ -1,1 +1,1 @@
-Türkiye cumhuriyeti'nin 11.cumhurbaşkanıdır Adalet ve Kalkınma Partisi'nden cumhurbaşkanı seçilmiştir.
+Türkiye Cumhuriyeti'nin 11.cumhurbaşkanıdır Adalet ve Kalkınma Partisi'nden cumhurbaşkanı seçilmiştir.
