--- a/İzmir.mw
+++ b/İzmir.mw
@@ -1,5 +1,5 @@
 [[Image:İzmir Turkey Provinces locator.jpg|300px|thumb|İzmir vilâyeti]]
-'''İzmir''' - [[Türkiye|Türkiye Cumhuriyeti]]niñ bir vilâyeti. Ülkenin 3. büyük şehridir nüfusu 2007 sayımına göre  3.739.353'tür
+'''İzmir''' - [[Türkiye|Türkiye Cumhuriyeti]]niñ bir vilâyeti. Vilâyetniñ merkezi İzmir şeeri memeleketniñ 3-nci büyük şeeridir, ealisi 2007 sayımına köre  3&nbsp;739&nbsp;353 kişidir.
 
 {{Türkiyeniñ illeri}}
 
