*Empty MediaWiki Message*

--- a/Abdullah_Gül.mw
+++ b/Abdullah_Gül.mw
@@ -1,1 +1,46 @@
-Türkiye Cumhuriyeti'nin 11.cumhurbaşkanıdır. Adalet ve Kalkınma Partisi'nden cumhurbaşkanı seçilmiştir.
+'''Abdullah Gül''' - [[Türkiye Cumhuriyeti]]niñ 11-nci prezidentidir. Adalet ve Kalkınma degen fırqadan prezident saylanğandır.
+
+[[Kategoriya:Türkiye]]
+[[Kategoriya:Siyasetçiler]]
+
+[[ar:عبد الله غول]]
+[[az:Abdulla Gül]]
+[[bg:Абдуллах Гюл]]
+[[br:Abdullah Gül]]
+[[ca:Abdullah Gül]]
+[[cs:Abdullah Gül]]
+[[da:Abdullah Gül]]
+[[de:Abdullah Gül]]
+[[el:Αμπντουλάχ Γκιούλ]]
+[[en:Abdullah Gül]]
+[[eo:Abdullah Gül]]
+[[es:Abdullah Gül]]
+[[et:Abdullah Gül]]
+[[fa:عبدالله گول]]
+[[fi:Abdullah Gül]]
+[[fr:Abdullah Gül]]
+[[he:עבדוללה גול]]
+[[hi:अब्दुल्लाह ग्युल]]
+[[hr:Abdullah Gül]]
+[[id:Abdullah Gül]]
+[[it:Abdullah Gül]]
+[[ja:アブドゥラー・ギュル]]
+[[ka:აბდულა გიული]]
+[[ku:Abdullah Gül]]
+[[ky:Абдулла Гүл]]
+[[lb:Abdullah Gül]]
+[[lv:Abdullahs Gils]]
+[[ms:Abdullah Gül]]
+[[nl:Abdullah Gül]]
+[[no:Abdullah Gül]]
+[[oc:Abdullah Gül]]
+[[pl:Abdullah Gül]]
+[[pt:Abdullah Gül]]
+[[ro:Abdullah Gül]]
+[[ru:Гюль, Абдулла]]
+[[sh:Abdullah Gul]]
+[[sv:Abdullah Gül]]
+[[tr:Abdullah Gül]]
+[[ur:عبد اللہ گل]]
+[[vi:Abdullah Gül]]
+[[zh:阿卜杜拉·居尔]]
