--- a/Recep_Tayyip_Erdoğan.mw
+++ b/Recep_Tayyip_Erdoğan.mw
@@ -1,1 +1,44 @@
-Türkiye Cumhuriyeti'nin Başbakanı ve 59.hükümeti Adalet ve Kalkınma Partisi (Ak Parti) Hükümetinin genel başkanıdır.
+'''Recep Tayyip Erdoğan''' - [[Türkiye Cumhuriyeti]]niñ baş naziri ve 59-ncı ükümeti Adalet ve Kalkınma fırqası (Ak Parti) ükümetiniñ reisidir.
+
+[[Kategoriya:Türkiye]]
+[[Kategoriya:Siyasetçiler]]
+
+[[ar:رجب طيب أردوغان]]
+[[az:Rəcəp Tayyip Ərdoğan]]
+[[br:Recep Tayyip Erdoğan]]
+[[cv:Реджеп Таййип Эрдоан]]
+[[da:Recep Tayyip Erdoğan]]
+[[de:Recep Tayyip Erdoğan]]
+[[el:Ρετζέπ Ταγίπ Ερντογάν]]
+[[en:Recep Tayyip Erdoğan]]
+[[eo:Recep Tayyip Erdoğan]]
+[[es:Recep Tayyip Erdoğan]]
+[[fi:Recep Tayyip Erdoğan]]
+[[fr:Recep Tayyip Erdoğan]]
+[[gl:Recep Tayyip Erdogan]]
+[[he:רג'פ טאיפ ארדואן]]
+[[hr:Recep Tayyip Erdoğan]]
+[[hu:Recep Tayyip Erdoğan]]
+[[id:Recep Tayyip Erdoğan]]
+[[it:Recep Tayyip Erdoğan]]
+[[ja:レジェップ・タイイップ・エルドアン]]
+[[ka:რეჯეფ თაიფ ერდოღანი]]
+[[ko:레제프 타이프 에르도안]]
+[[ku:Recep Tayyip Erdoğan]]
+[[lad:Recep Tayyip Erdoğan]]
+[[lv:Redžeps Tajjips Erdoans]]
+[[mr:रेसेप तय्यिप एर्दोगान]]
+[[nl:Recep Tayyip Erdoğan]]
+[[nn:Recep Tayyip Erdoğan]]
+[[no:Recep Tayyip Erdoğan]]
+[[oc:Recep Tayyip Erdoğan]]
+[[pl:Recep Tayyip Erdoğan]]
+[[pt:Recep Tayyip Erdoğan]]
+[[ru:Эрдоган, Реджеп Таййип]]
+[[simple:Recep Tayyip Erdoğan]]
+[[sq:Recep Tayyip Erdoğan]]
+[[sr:Реџеп Тајип Ердоган]]
+[[sv:Recep Tayyip Erdoğan]]
+[[tl:Recep Tayyip Erdoğan]]
+[[tr:Recep Tayyip Erdoğan]]
+[[zh:雷杰普·塔伊普·埃尔多安]]
