*Empty MediaWiki Message*

--- a/Ege_deñizi.mw
+++ b/Ege_deñizi.mw
@@ -1,1 +1,62 @@
-Akdenizin kolu olan bir iç denizdir. yüzölçümü 214.000 kilometrekare en derin yeri 2524 metredir.
+'''Ege deñizi''' ya da '''Adalar deñizi''' - [[Aq deñiz]]niñ qolu olğan bir iç deñizdir. Meydanlığı 214&nbsp;000 km², eñ teren yeri 2524 metrdir.
+
+[[Kategoriya:Deñizler]]
+
+[[ar:بحر إيجة]]
+[[ast:Mar Exéu]]
+[[az:Egey dənizi]]
+[[be:Эгейскае мора]]
+[[bg:Егейско море]]
+[[br:Mor Egea]]
+[[ca:Mar Egea]]
+[[cs:Egejské moře]]
+[[cv:Эгей тинĕсĕ]]
+[[cy:Môr Aegeaidd]]
+[[da:Ægæiske Hav]]
+[[de:Ägäisches Meer]]
+[[el:Αιγαίο Πέλαγος]]
+[[en:Aegean Sea]]
+[[eo:Egea Maro]]
+[[es:Mar Egeo]]
+[[et:Egeuse meri]]
+[[eu:Egeo itsasoa]]
+[[fa:دریای اژه]]
+[[fi:Aigeianmeri]]
+[[fr:Mer Égée]]
+[[gl:Mar Exeo]]
+[[he:הים האגאי]]
+[[hr:Egejsko more]]
+[[hu:Égei-tenger]]
+[[id:Laut Aegea]]
+[[is:Eyjahaf]]
+[[it:Mar Egeo]]
+[[ja:エーゲ海]]
+[[jv:Segara Aegea]]
+[[ka:ეგეოსის ზღვა]]
+[[ko:에게 해]]
+[[ku:Deryaya Ege]]
+[[la:Mare Aegaeum]]
+[[lt:Egėjo jūra]]
+[[lv:Egejas jūra]]
+[[mt:Baħar Eġew]]
+[[nl:Egeïsche Zee]]
+[[no:Egeerhavet]]
+[[oc:Mar Egèa]]
+[[pl:Morze Egejskie]]
+[[pt:Mar Egeu]]
+[[ro:Marea Egee]]
+[[ru:Эгейское море]]
+[[scn:Mari Eggeu]]
+[[sh:Egejsko more]]
+[[sk:Egejské more]]
+[[sl:Egejsko morje]]
+[[sq:Deti Egje]]
+[[sr:Егејско море]]
+[[sv:Egeiska havet]]
+[[th:ทะเลอีเจียน]]
+[[tr:Ege Denizi]]
+[[uk:Егейське море]]
+[[ur:بحیرہ ایجیئن]]
+[[vec:Mar Egeo]]
+[[yi:אגאישער ים]]
+[[zh:爱琴海]]
