The file [[:Image:Kiribati_COA.svg]] has been replaced by [[:Image:Coat_of_arms_of_Kiribati.svg]] by administrator [[:commons:User:Siebrand]]: ''Was in category "Duplicate", exact duplicate''. ''[[m:User:CommonsDelinker|Translate me!]]''

--- a/Kiribati.mw
+++ b/Kiribati.mw
@@ -6,7 +6,7 @@
 |Original adı 2 = Kiribati 
 |Resmiy Original adı 2 =  Republic of Kiribati
 |Bayraq =  Flag of Kiribati.svg
-|Gerb =  Kiribati COA.svg
+|Gerb =Coat_of_arms_of_Kiribati.svg
 |Harita =  LocationKiribati.png 
 |Şiar =  Te Mauri, Te Raoi ao Te Tabomoa
 |Şiar tercimesi =  Sağlıq, Barış ve Abadanlıq
