--- a/Türkiye.mw
+++ b/Türkiye.mw
@@ -20,13 +20,13 @@
  |Meydanlıq=783 562
  |Suv=1,3
  |Eali sırası=17-inci
- |Eali=72 600 000
- |Eali senesi=2005 
- |Eali sıqlığı=93
- |ĞSMK=612,3 mlrd.
- |ĞSMK senesi=2006
- |ĞSMK sırası=17-inci
- |Can başına ĞSMK=8385
+ |Eali=70 586 256
+ |Eali senesi=2007
+ |Eali sıqlığı=91
+ |ĞSMK=941.6 mlrd.
+ |ĞSMK senesi=2008 (IMF)
+ |ĞSMK sırası=15-inci
+ |Can başına ĞSMK=13511
  |Para birlemi=[[Yañı türk lirası]] (TRY, YTL)
  |Domen=[[.tr]]
  |Telefon kodu=90
