*Empty MediaWiki Message*

--- a/Türkiye.mw
+++ b/Türkiye.mw
@@ -24,7 +24,7 @@
  |Eali senesi=2007
  |Eali sıqlığı=91
  |ĞSMK=941.6 mlrd.
- |ĞSMK senesi=2008 (IMF)
+ |ĞSMK senesi=2008 IMF
  |ĞSMK sırası=15-inci
  |Can başına ĞSMK=13511
  |Para birlemi=[[Yañı türk lirası]] (TRY, YTL)
