*Empty MediaWiki Message*

--- a/Türkiye.mw
+++ b/Türkiye.mw
@@ -32,7 +32,7 @@
  |Telefon kodu=90
  |Saat quşağı =+2
  }}
-'''Türkiye''', resmiy adı '''Türkiye Cumhuriyeti''' ({{lang-tr|Türkiye, Türkiye Cumhuriyeti}}) – ğarbiy [[Asiya]]da bir memleket. [[Qara deñiz|Qara]], [[Aq deñiz|Aq]] ve [[Ege deñizi|Ege]] deñizlerine çıqışı bardır. Paytahtı [[Ankara]], eñ balaban şeeri [[İstambul]]dır.Türkiye nin olduğu yerida esküdan Osmanlı Dövleti var idi.
+'''Türkiye''', resmiy adı '''Türkiye Cumhuriyeti''' ({{lang-tr|Türkiye, Türkiye Cumhuriyeti}}) – ğarbiy [[Asiya]]da bir memleket. [[Qara deñiz|Qara]], [[Aq deñiz|Aq]] ve [[Ege deñizi|Ege]] deñizlerine çıqışı bardır. Paytahtı [[Ankara]], eñ balaban şeeri [[İstambul]]dır. Zemaneviy Türkiye peyda olunğan evel onıñ topraqlarında [[Osmanlı Devleti]] bar edi.
 
 
 {{commons|Türkiye}}
