*Empty MediaWiki Message*

--- a/İnd_okeanı.mw
+++ b/İnd_okeanı.mw
@@ -1,5 +1,5 @@
 [[Resim:Indian Ocean bathymetry srtm.png|200px|thumb|right|İnd okeanı]]
-'''İnd okeanı''' - şimalde [[Asiya]], ğarpta [[Afrika]] ve [[Arabistan yarımadası]], şarqta [[Malay yarımadası]], [[Sunda adaları]] ve [[Tınç okean]] tarafından çevrilgen, dünyanıñ üçünci büyük [[okean]]ıdır. En derin yeri Avustralya'nın güneybatısındaki Perth şehrinden yaklaşık 1100 km uzakta bulunan 8047 m'lik çukurdur.
+'''İnd okeanı''' - şimalde [[Asiya]], ğarpta [[Afrika]] ve [[Arabistan yarımadası]], şarqta [[Malay yarımadası]], [[Sunda adaları]] ve [[Tınç okean]] tarafından çevrilgen, dünyanıñ üçünci büyük [[okean]]ıdır. Eñ teren yeri [[Avstraliya]]nıñ cenüp-ğarbındaki [[Pert]] şeerinden yaqlaşıq 1100 km uzaqta bulunğan 8047 metrlik çuqurdır.
 
 {{Commons|İndian Ocean}}
 
