--- a/Okean.mw
+++ b/Okean.mw
@@ -1,1 +1,93 @@
-Kıtaları birbirinden ayıran engin ve açık denizlerdir.
+'''Okean''' - [[qıta]]larnı bir-birinden ayırğan engin ve açıq [[deñiz]]idir.
+
+[[Kategoriya:Okeanlar| ]]
+
+[[an:Ozián]]
+[[ar:محيط (جغرافيا)]]
+[[arc:ܐܘܩܝܢܘܣ]]
+[[az:Okean]]
+[[bcl:Kadagatan]]
+[[be:Акіян]]
+[[be-x-old:Акіян]]
+[[bg:Световен океан]]
+[[bn:মহাসমুদ্র]]
+[[br:Meurvor]]
+[[bs:Okean]]
+[[ca:Oceà]]
+[[cs:Oceán]]
+[[cv:Океан]]
+[[cy:Cefnfor]]
+[[da:Verdenshave]]
+[[de:Ozean]]
+[[el:Ωκεανός]]
+[[en:Ocean]]
+[[eo:Oceano]]
+[[es:Océano]]
+[[et:Ookean]]
+[[eu:Ozeano]]
+[[fa:اقیانوس]]
+[[fr:Océan]]
+[[fur:Ocean]]
+[[fy:Oseaan]]
+[[gl:Océano]]
+[[he:אוקיינוס]]
+[[hi:महासागर]]
+[[hr:Ocean]]
+[[ht:Oseyan]]
+[[hu:Óceán]]
+[[hy:Օվկիանոս]]
+[[id:Samudra]]
+[[ig:Oke osimiri]]
+[[io:Oceano]]
+[[is:Sjór]]
+[[it:Oceano]]
+[[ja:大洋]]
+[[jbo:braxamsi]]
+[[jv:Samodra]]
+[[ka:ოკეანე]]
+[[ko:대양]]
+[[la:Oceanus]]
+[[lo:ມະຫາສະໝຸດ]]
+[[lt:Vandenynas]]
+[[lv:Okeāns]]
+[[mg:Ranomasina]]
+[[mk:Океан]]
+[[ml:സമുദ്രം]]
+[[mn:Далай]]
+[[mr:महासागर]]
+[[ms:Lautan]]
+[[nds:Ozean]]
+[[nl:Oceaan]]
+[[nn:Verdshav]]
+[[no:Hav#Verdenshavene]]
+[[pl:Ocean]]
+[[pt:Oceano]]
+[[qu:Mama qucha]]
+[[ro:Ocean]]
+[[ru:Океан]]
+[[scn:Ocèanu]]
+[[sh:Ocean]]
+[[simple:Ocean]]
+[[sl:Ocean]]
+[[sq:Oqeani]]
+[[sr:Океан]]
+[[su:Jaladri]]
+[[sv:Hav#V.C3.A4rldshav]]
+[[sw:Bahari]]
+[[te:మహాసముద్రము]]
+[[tg:Уқёнус]]
+[[th:มหาสมุทร]]
+[[tl:Karagatan]]
+[[tr:Okyanus]]
+[[uk:Океан]]
+[[uz:Okean]]
+[[vec:Oceano]]
+[[vi:Đại dương]]
+[[wa:Oceyan]]
+[[wo:Mbàmbulaan]]
+[[yi:אקעאן]]
+[[yo:Òkun]]
+[[zh:海洋]]
+[[zh-classical:洋]]
+[[zh-min-nan:Hái-iûⁿ]]
+[[zh-yue:海洋]]
