*Empty MediaWiki Message*

--- a/Okean.mw
+++ b/Okean.mw
@@ -1,5 +1,7 @@
 '''Okean''' - [[qıta]]larnı bir-birinden ayırğan engin ve açıq [[deñiz]]idir.
 
+{{okeanlar}}
+
 [[Kategoriya:Okeanlar| ]]
 
 [[an:Ozián]]
