[[User:88.227.59.69|88.227.59.69]] tarafından yapılğan deñişiklikler keri alınıp, [[User:Alessandro|Alessandro]] tarafından deñiştirilgen evelki versiya keri ketirildi.

--- a/Osmanlı_Devleti.mw
+++ b/Osmanlı_Devleti.mw
@@ -37,7 +37,7 @@
 |stat_area5   = 20 000 000
 |Para birlemi = [[Aqçe]], [[Quruş]], [[Osmanlı Lirası]]
 }}
-'''Osmanlı Devleti''', resmiy ad '''Osmanlı Aliy Devleti''' (оsmanlıca: دولت عثمانيه  - ''Devlet-i Osmâniyye'', دولت عاليه عثمانيه - ''Devlet-i Âliye-i Osmâniyye'') — XIII—XX asırlarında yaşağan Şarqiy [[Avropa]], Ğarbiy [[Asiya]] ve Şimaliy [[Afrika]]daki bir devlet. Osmanlı Devletiniñ doğrudan merkezden idare etilgen [[eyalet]]ler, özüne tâbi devletler, imaye altına alğan devletleri, bergige bağlağan devletleri ve [[hilâfet]]en özüne bağlanğan coğrafiyalar ile birlikte 623 yıllıq ömründe farqlı devirlerde mustaqillik qurğanı alğan 50 million km² keçe.
+'''Osmanlı Devleti''', resmiy ad '''Osmanlı Aliy Devleti''' (оsmanlıca: دولت عثمانيه  - ''Devlet-i Osmâniyye'', دولت عاليه عثمانيه - ''Devlet-i Âliye-i Osmâniyye'') — XIII—XX asırlarında yaşağan Şarqiy [[Avropa]], Ğarbiy [[Asiya]] ve Şimaliy [[Afrika]]daki bir devlet. Osmanlı Devletiniñ doğrudan merkezden idare etilgen [[eyalet]]ler, özüne tabi devletler, imaye altına alğan devletleri, bergige bağlağan devletleri ve [[hilâfet]]en özüne bağlanğan coğrafiyalar ile birlikte 623 yıllıq ömründe farqlı devirlerde mustaqillik qurğanı alğan 50 million km² keçe.
 
 [[1475]] senesinden sоñ [[Qırım Hanlığı]] Osmanlı Devletiniñ vassalı edi.
 
