--- a/Türkiye.mw
+++ b/Türkiye.mw
@@ -23,10 +23,10 @@
  |Eali=70 586 256
  |Eali senesi=2007
  |Eali sıqlığı=91
- |ĞSMK=941.6 mlrd.
+ |ĞSMK=941,6 mlrd.
  |ĞSMK senesi=2008 IMF
  |ĞSMK sırası=15-inci
- |Can başına ĞSMK=13.511
+ |Can başına ĞSMK=13 511
  |Para birlemi=[[Yañı türk lirası]] (TRY, YTL)
  |Domen=[[.tr]]
  |Telefon kodu=90
