Sıqça qullanılğan yazılış.

--- a/İstanbul.mw
+++ b/İstanbul.mw
@@ -1,6 +1,6 @@
 {{MY
  |tip                        = şeer
- |qırımtatar adı             = İstambul
+ |qırımtatar adı             = İstanbul
  |original adı               = ''türk.'' İstanbul
  |memleket                   = Türkiye
  |gerb                       = 
@@ -45,9 +45,9 @@
  |sayt                       = http://www.ibb.gov.tr/
  |sayt tili                  =
 }}
-'''İstambul''' ({{Lang-tr|İstanbul}}) - [[Türkiye|Türkiye Cumhuriyeti]]niñ eñ balaban şeeridir, [[Osmanlı Devleti|Osmanlı Devleti]] ve [[Bizans İmperiyası]]nıñ sabıq paytahtı. Tarihiy adları - Kоnstantiniye, Konstantinopolis, Yañı Rоma, Bizantion.
+'''İstanbul''' ({{Lang-tr|İstanbul}}) - [[Türkiye|Türkiye Cumhuriyeti]]niñ eñ balaban şeeridir, [[Osmanlı Devleti|Osmanlı Devleti]] ve [[Bizans İmperiyası]]nıñ sabıq paytahtı. Tarihiy adları - Kоnstantiniye, Konstantinopolis, Yañı Rоma, Bizantion.
 
-== İstambuldaki Qırımtatar teşkilâtları ==
+== İstanbuldaki Qırımtatar teşkilâtları ==
 * Kırım Türkleri Kültür ve Yardımlaşma Derneği - İstanbul Şubesi (İstanbul Kırım Derneği)
 * Emel Kırım Vakfı
 
