--- a/Edil.mw
+++ b/Edil.mw
@@ -1,5 +1,5 @@
 {{Özen
-| ad = İdil
+| ad = Edil
 | diger tillerde ad =  {{lang-ru|Волга}}, {{lang-tt|Идел}}
 | resim = 
 | resim yazı =
@@ -11,11 +11,11 @@
 | ağız yüksekligi = -28 m
 | havuz meydanlığı = 1 380 000 km²
 }}
-'''İdil''' (bazan İtil ve siyrek olaraq Edil şeklinde de yazıla), [[Avropa]]nıñ eñ uzun özenidir. Uzunlığı taqriben 3692 km olğan İdil, [[Moskva]] ile [[Sankt Peterburg]] arasındaki Valday yaylalarından doğa. Deñiz seviyesinden 28 m astında olğan [[Hazar Deñizi]]ne töküle. Hazar deñizine 50 km qala 200den ziyade qolğa ayırılıp [[İdil Deltası]] meydanğa kelir. Bu deltanıñ keñligi 100 kmden ziyadedir.
+'''Edil''' (bazıda ''İdil'' ve ''Etil'' şeklinde de yazıla) - [[Avropa]]nıñ eñ uzun özenidir. Uzunlığı taqriben 3692 km olğan Edil, [[Moskva]] ile [[Sankt Peterburg]] arasındaki Valday yaylalarından doğa. Deñiz seviyesinden 28 m astında olğan [[Hazar Deñizi]]ne töküle. Hazar deñizine 50 km qala 200-den ziyade qolğa ayırılıp [[Edil deltası]] meydanğa kelir. Bu deltanıñ keñligi 100 km-den ziyadedir.
 
-İdil qışnıñ üç ayında toñar. Bu zaman zarfında da özenden qara yolu olaraq faydalanılır.
+Edil qışnıñ üç ayında toñar. Bu zaman zarfında da özenden qara yolu olaraq faydalanılır.
 
-Tarihiy Avropa [[Hun]] Ükümdarı [[Atilla]]nıñ ismi İdil özeninden kelmektedir: Atilla = İdilli.
+Bazı tarihçılarğa köte tarihiy Avropa [[Hunn]] ükümdarı [[Atilla]]nıñ ismi Edil özeninden kele: Atilla = Edilli.
 
 [[Kategoriya:Özenler]]
 
