--- a/Diyarbakır_(il).mw
+++ b/Diyarbakır_(il).mw
@@ -1,4 +1,4 @@
-[[Image:Diyarbakir Turkey Provinces locator.jpg|300px|thumb|Diyarbakır vilâyeti]]
+[[Image:Diyarbakır_Turkey_Provinces_locator.jpg|300px|thumb|Diyarbakır vilâyeti]]
 '''Diyarbakır''' - [[Türkiye|Türkiye Cumhuriyeti]]niñ bir vilâyeti.
 
 {{Türkiyeniñ illeri}}
