*Empty MediaWiki Message*

--- a/Edil.mw
+++ b/Edil.mw
@@ -15,7 +15,7 @@
 
 Edil qışnıñ üç ayında toñar. Bu zaman zarfında da özenden qara yolu olaraq faydalanılır.
 
-Bazı tarihçılarğa köte tarihiy Avropa [[Hunn]] ükümdarı [[Atilla]]nıñ ismi Edil özeninden kele: Atilla = Edilli.
+Bazı tarihçılarğa köre tarihiy Avropa [[Hunn]] ükümdarı [[Atilla]]nıñ ismi Edil özeninden kele: Atilla = Edilli.
 
 [[Kategoriya:Özenler]]
 
