The file [[:Image:Paraguay_COA.svg]] has been replaced by [[:Image:Coat_of_arms_of_Paraguay.svg]] by administrator [[:commons:User:Siebrand]]: ''Was in category "Duplicate", exact duplicate''. ''[[m:User:CommonsDelinker|Translate me!]]''

--- a/Paragvay.mw
+++ b/Paragvay.mw
@@ -6,7 +6,7 @@
  |Resmiy Original adı = República del Paraguay
  |Resmiy Original adı 2 = Tetã Paraguái
  |Bayraq =  Flag of Paraguay.svg
- |Gerb =  Paraguay COA.svg
+ |Gerb =Coat_of_arms_of_Paraguay.svg
  |Harita =  LocationParaguay.svg
  |Şiar = Paz y justicia
  |Şiar tercimesi = Sulh ve adalet
