The file [[:Image:Romania_Coat_of_Arms.svg]] has been replaced by [[:Image:Coat_of_arms_of_Romania.svg]] by administrator [[:commons:User:Siebrand]]: ''Was in category "Duplicate", exact duplicate''. ''[[m:User:CommonsDelinker|Translate me!]]''

--- a/Romaniya.mw
+++ b/Romaniya.mw
@@ -2,7 +2,7 @@
 |Qırımtatar adı = Romaniya
 |Original adı = România
 |Bayraq =  Flag of Romania.svg 
-|Gerb =  Romania Coat of Arms.svg
+|Gerb =Coat_of_arms_of_Romania.svg
 |Harita =  EU location ROM.png 
 |Gimn = Deşteaptă-te, române!
 |Til =  [[Roman tili]]
