The file [[:Image:Papua_New_Guinea_coa.svg]] has been replaced by [[:Image:Coat_of_arms_of_Papua_New_Guinea.svg]] by administrator [[:commons:User:Siebrand]]: ''Was in category "Duplicate", exact duplicate''. ''[[m:User:CommonsDelinker|Translate me!]

--- a/Papua_Yañı_Gvineya.mw
+++ b/Papua_Yañı_Gvineya.mw
@@ -4,7 +4,7 @@
  |Original adı = Papua New Guinea
  |Resmiy Original adı = Independent State of Papua New Guinea
  |Bayraq =  Flag of Papua New Guinea.svg
- |Gerb =  Papua New Guinea coa.svg
+ |Gerb =Coat_of_arms_of_Papua_New_Guinea.svg
  |Harita =  LocationPapuaNewGuinea.svg
  |Şiar = Unity in diversity
  |Şiar tercimesi =
