*Empty MediaWiki Message*

--- a/Çırçıq_vaqiaları.mw
+++ b/Çırçıq_vaqiaları.mw
@@ -1,3 +1,3 @@
-40 yıl evelsi qırımtatarlarnıñ tarihinda facıalı, aynı vaqıtta eñ emietli vaqialarniñ birisi olıp keçken edi. 1968 senesi aprel 21-de [[Özbekistan]]iñ hamiyacilar ve madenciler şeeri Çırçıqta olıp keçken vaqialar "yuqusırağan" pamuqçılar cumhurietini ve [[Moskva]]ni sarsıtqanlarından ğayrı, uquqqoruyıcı [[Pötr Grigorenko]] aytqanıña köre, "bütün cianğa belli oldılar". Laf Sovet devletiniñ qırımtatarlarğa ve olarnıñ milliy areketine qarşı cezalav aktsialarniñ birisi aqqında ketmekte.
+40 yıl evelsi qırımtatarlarnıñ tarihinda facialı, aynı vaqıtta eñ emietli vaqialarniñ birisi olıp keçken edi. 1968 senesi aprel 21-de [[Özbekistan]]iñ hamiyacilar ve madenciler şeeri Çırçıqta olıp keçken vaqialar "yuqusırağan" pamuqçılar cumhurietini ve [[Moskva]]ni sarsıtqanlarından ğayrı, uquqqoruyıcı [[Pötr Grigorenko]] aytqanıña köre, "bütün cianğa belli oldılar". Laf Sovet devletiniñ qırımtatarlarğa ve olarnıñ milliy areketine qarşı cezalav aktsialarniñ birisi aqqında ketmekte.
 
 Şu künlerniñ hronologiyasini tek bu vaqialarniñ iştiraqçileri degil, körumli uquqqoru yıcılar, advokatlar, çetel neşirleriniñ muhbirleri ve tarihçi alimler tasvirlegen ediler.
