--- a/1968.mw
+++ b/1968.mw
@@ -7,7 +7,7 @@
 
 
 == Vaqialar ==
-*Aprel 25; [[Çırçıq vaqialari]].
+*Aprel 25; [[Çırçıq vaqiaları]].
 == Doğumlar ==
 
 == Ölümler ==
@@ -15,155 +15,124 @@
 [[Kategoriya:1968| ]]
 
 [[af:1968]]
-[[als:2000er#2007]]
-[[am:2007 እ.ኤ.አ.]]
-[[an:2007]]
-[[ar:2007]]
-[[arc:2007]]
-[[ast:2007]]
-[[av:2007]]
-[[ay:2007]]
-[[az:2007]]
-[[bat-smg:2007]]
-[[bcl:2007]]
-[[be:2007]]
-[[be-x-old:2007]]
-[[bg:2007]]
-[[bh:२००७]]
-[[bn:২০০৭]]
-[[bpy:মারি ২০০৭]]
-[[br:2007]]
-[[bs:2007]]
-[[bug:2007]]
-[[ca:2007]]
-[[cbk-zam:2007]]
-[[ceb:2007]]
-[[cs:2007]]
-[[csb:2007]]
-[[cv:2007]]
-[[cy:2007]]
-[[da:2007]]
-[[de:2007]]
-[[dv:2007]]
-[[el:2007]]
+[[am:1968 እ.ኤ.አ.]]
+[[an:1968]]
+[[ar:1968]]
+[[ast:1968]]
+[[av:1968]]
+[[az:1968]]
+[[bat-smg:1968]]
+[[be:1968]]
+[[be-x-old:1968]]
+[[bg:1968]]
+[[bh:१९६८]]
+[[bn:১৯৬৮]]
+[[bpy:মারি ১৯৬৮]]
+[[br:1968]]
+[[bs:1968]]
+[[ca:1968]]
+[[cbk-zam:1968]]
+[[co:1968]]
+[[cs:1968]]
+[[csb:1968]]
+[[cv:1968]]
+[[cy:1968]]
+[[da:1968]]
+[[de:1968]]
+[[el:1968]]
 [[en:1968]]
-[[eo:2007]]
-[[es:2007]]
-[[et:2007]]
-[[eu:2007]]
-[[fa:۲۰۰۷ (میلادی)]]
-[[fi:2007]]
-[[fiu-vro:2007]]
-[[fo:2007]]
-[[fr:2007]]
-[[frp:2007]]
-[[fur:2007]]
-[[fy:2007]]
-[[ga:2007]]
-[[gd:2007]]
-[[gl:2007]]
-[[glk:2007]]
-[[gn:2007]]
-[[gv:2007]]
-[[haw:2007]]
-[[he:2007]]
-[[hi:२००७]]
-[[hr:2007.]]
-[[ht:2007 (almanak gregoryen)]]
-[[hu:2007]]
-[[hy:2007]]
-[[ia:2007]]
-[[id:2007]]
-[[ig:2007]]
-[[io:2007]]
-[[is:2007]]
-[[it:2007]]
-[[iu:2007]]
-[[ja:2007年]]
-[[jbo:2007moi nanca]]
-[[jv:2007]]
-[[ka:2007]]
-[[kab:2007]]
-[[kk:2007]]
-[[km:២០០៧]]
-[[kn:೨೦೦೭]]
-[[ko:2007년]]
-[[ksh:Joohr 2007]]
-[[ku:2007]]
-[[kw:2007]]
-[[la:2007]]
-[[lb:2007]]
-[[li:2007]]
-[[lij:2007]]
-[[lt:2007]]
-[[lv:2007]]
-[[mi:2007]]
-[[mk:2007]]
-[[mr:इ.स. २००७]]
-[[ms:2007]]
-[[mt:2007]]
-[[mzn:2007]]
-[[nah:2007]]
-[[nap:2007]]
-[[nds:2007]]
-[[nds-nl:2007]]
-[[new:२००७]]
-[[nl:2007]]
-[[nn:2007]]
-[[no:2007]]
-[[nov:2007]]
-[[nrm:2007]]
-[[ny:2007]]
-[[oc:2007]]
-[[om:2007]]
-[[or:୨୦୦୭]]
-[[os:2007]]
-[[pag:2007]]
-[[pap:2007]]
-[[pi:२००७]]
-[[pl:2007]]
-[[pms:2007]]
-[[pt:2007]]
-[[qu:2007]]
-[[ro:2007]]
-[[roa-rup:2007]]
-[[ru:2007 год]]
-[[scn:2007]]
-[[se:2007]]
-[[sh:2007]]
-[[simple:2007]]
-[[sk:2007]]
-[[sl:2007]]
-[[so:2007]]
-[[sq:2007]]
-[[sr:2007]]
-[[su:2007]]
-[[sv:2007]]
-[[sw:2007]]
-[[ta:2007]]
-[[te:2007]]
-[[tet:2007]]
-[[tg:2007]]
-[[th:พ.ศ. 2550]]
-[[tk:2007]]
-[[tl:2007]]
-[[tpi:2007]]
-[[tr:2007]]
-[[tt:2007]]
-[[ty:2007]]
-[[uk:2007]]
-[[ur:2007ء]]
-[[uz:2007]]
-[[vec:2007]]
-[[vi:2007]]
-[[vls:2007]]
-[[wa:2007]]
-[[wuu:公元2007年]]
-[[yi:2007]]
-[[yo:2007]]
-[[za:2007 bi]]
-[[zh:2007年]]
-[[zh-classical:二〇〇七年]]
-[[zh-min-nan:2007 nî]]
-[[zh-yue:2007年]]
-[[zu:2007]]
+[[eo:1968]]
+[[es:1968]]
+[[et:1968]]
+[[eu:1968]]
+[[fa:۱۹۶۸ (میلادی)]]
+[[fi:1968]]
+[[fo:1968]]
+[[fr:1968]]
+[[frp:1968]]
+[[fy:1968]]
+[[ga:1968]]
+[[gd:1968]]
+[[gl:1968]]
+[[he:1968]]
+[[hi:1968]]
+[[hr:1968.]]
+[[ht:1968 (almanak gregoryen)]]
+[[hu:1968]]
+[[hy:1968]]
+[[ia:1968]]
+[[id:1968]]
+[[ilo:1968]]
+[[io:1968]]
+[[is:1968]]
+[[it:1968]]
+[[ja:1968年]]
+[[jv:1968]]
+[[ka:1968]]
+[[kk:1968]]
+[[kn:೧೯೬೮]]
+[[ko:1968년]]
+[[ksh:Joohr 1968]]
+[[ku:1968]]
+[[kw:1968]]
+[[la:1968]]
+[[lb:1968]]
+[[lij:1968]]
+[[lmo:1968]]
+[[ln:1968]]
+[[lt:1968]]
+[[map-bms:1968]]
+[[mi:1968]]
+[[mk:1968]]
+[[mr:इ.स. १९६८]]
+[[ms:1968]]
+[[nah:1968]]
+[[nap:1968]]
+[[nds:1968]]
+[[new:ई सं १९६८]]
+[[nl:1968]]
+[[nn:1968]]
+[[no:1968]]
+[[nov:1968]]
+[[nrm:1968]]
+[[oc:1968]]
+[[os:1968]]
+[[pam:1968]]
+[[pdc:1968]]
+[[pi:१९६८]]
+[[pl:1968]]
+[[pt:1968]]
+[[qu:1968]]
+[[ro:1968]]
+[[ru:1968 год]]
+[[scn:1968]]
+[[se:1968]]
+[[sh:1968]]
+[[simple:1968]]
+[[sk:1968]]
+[[sl:1968]]
+[[so:1968]]
+[[sq:1968]]
+[[sr:1968]]
+[[su:1968]]
+[[sv:1968]]
+[[sw:1968]]
+[[ta:1968]]
+[[te:1968]]
+[[tg:1968]]
+[[th:พ.ศ. 2511]]
+[[tk:1968]]
+[[tl:1968]]
+[[tr:1968]]
+[[tt:1968]]
+[[ty:1968]]
+[[uk:1968]]
+[[uz:1968]]
+[[vec:1968]]
+[[vi:1968]]
+[[vls:1968]]
+[[wa:1968]]
+[[yo:1968]]
+[[zh:1968年]]
+[[zh-min-nan:1968 nî]]
+[[zh-yue:1968年]]
