*Empty MediaWiki Message*

--- a/Latin_elifbesi.mw
+++ b/Latin_elifbesi.mw
@@ -1,4 +1,4 @@
-Şimdiki latin [[elifbe]]sinde, nenen [[Roman]], [[Alman]] ve çoq dıger til aileleri qullanalar, 26 arfi bardir.
+Şimdiki latin [[elifbe]]sinde, nenen [[Roman|Romans tilleri]], [[German|German tilleri]] ve çoq dıger til aileleri qullanalar, 26 arfi bardir.
 
 {| class="standart"
 |-----
