*Empty MediaWiki Message*

--- a/Latin_elifbesi.mw
+++ b/Latin_elifbesi.mw
@@ -36,7 +36,7 @@
 {{Latin elifbesi}}
 
 [[Kategoriya:Latin elifbesi|*]]
-[[Категория:Latin tili]]
+[[Kategoriya:Latin tili]]
 
 [[af:Latynse alfabet]]
 [[als:Lateinisches Alphabet]]
