--- a/Cenübiy_Koreya.mw
+++ b/Cenübiy_Koreya.mw
@@ -2,7 +2,7 @@
 |Qırımtatar adı = Kоreya Cumhuriyeti
 |Original adı = 대한민국<br><small>/Daehan Minguk/</small>
 |Bayraq =  Flag of South Korea.svg
-|Gerb =  South korea COA.svg
+|Gerb =Coat_of_arms_of_South_Korea.svg
 |Harita =  LocationSouthKorea.png
 |Gimn = Aegukga 
 |Til =  [[Koreya tili]]
