--- a/Urugvay.mw
+++ b/Urugvay.mw
@@ -4,7 +4,7 @@
  |Original adı =  Uruguay 
  |Resmiy Original adı = República Oriental del Uruguay
  |Bayraq =  Flag of Uruguay.svg
- |Gerb =  Uruguay coa.svg
+ |Gerb =Coat_of_arms_of_Uruguay.svg
  |Harita =  LocationUruguay.svg
  |Şiar = Libertad o muerte
  |Şiar tercimesi =  Azatlıq ya da ölüm
