The file [[:Image:Modis_cyprus_lrg.jpg]] has been replaced by [[:Image:Cyprus_lrg.jpg]] by administrator [[:commons:User:Siebrand]]: ''Was in category "Duplicate", exact duplicate''. ''[[m:User:CommonsDelinker|Translate me!]]''

--- a/Qıbrız.mw
+++ b/Qıbrız.mw
@@ -1,4 +1,4 @@
-[[Resim:Modis cyprus lrg.jpg|thumb|right|200px|Qıbrız]]
+[[Resim:Cyprus_lrg.jpg|thumb|right|200px|Qıbrız]]
 '''Qıbrız''' ({{lang-tr|Kıbrıs}}, [[Yunan tili|yunanca]]:Κύπρος). [[Aq deñiz]]de ada.
 
 [[Kategoriya:Adalar]]
