--- a/Qıbrız.mw
+++ b/Qıbrız.mw
@@ -1,6 +1,7 @@
 [[Resim:Cyprus_lrg.jpg|thumb|right|200px|Qıbrız]]
-'''Qıbrız''' ({{lang-tr|Kıbrıs}}, [[Yunan tili|yunanca]]:Κύπρος). [[Aq deñiz]]de ada.
+'''Qıbrız''' ({{lang-tr|Kıbrıs}}, {{lang-el|Κύπρος}}) - [[Aq deñiz]]de bir ada.
 
+[[Kategoriya:Qıbrız| ]]
 [[Kategoriya:Adalar]]
 
 [[als:Zypern (Insel)]]
