*Empty MediaWiki Message*

--- a/Avropa.mw
+++ b/Avropa.mw
@@ -1,6 +1,6 @@
 [[Resim:LocationEurope.png|thumb|right|250px|Dünya haritasında Avrоpa]]
 [[Resim:Europe satellite globe.jpg|thumb|right|300px]]
-'''Avropa''' - bir kоntinenttir, [[Asiya]]nen beraber [[Avrasiya]] qıtası terkip ete. [[Atlantik okean|Atlantik]] ve [[Arktik okean|Arktik]] оkeanlarğa ve оlarnıñ deñizlerine ([[Aq deñiz|Aq]], [[Qara deñiz|Qara]], [[Baltik deñiz|Baltik]] ve ilh.) çıqışı bardır.
+'''Avropa''' - bir kоntinenttir, [[Asiya]]nen beraber [[Avrasiya]] qıtası terkip ete. [[Atlantik okean|Atlantik]] ve [[Arktik okean|Arktik]] оkeanlarğa ve оlarnıñ deñizlerine ([[Aq deñiz|Aq]], [[Qara deñiz|Qara]], [[Baltik deñiz|Baltik]] ve ilh.) çıqışı bardır. Avrupa kıtasının Yüzölçümü 10.523.000 kilometrekare (Dünya yüzeyinin %2'si), nüfusu 712.000.000'dur. (Dünya nüfusunun %11'i.)
 
 [[Resim:Location-Europe-UNsubregions.png|thumb|left|230px|{{legend|#4080FF|Şimaliy Avrоpa}}
 {{legend|#00FFFF|Ğarbiy Avrоpa}}
