*Empty MediaWiki Message*

--- a/I_Osman.mw
+++ b/I_Osman.mw
@@ -1,5 +1,6 @@
 [[Resim:I Osman.jpg|thumb|right|200px|I Osman]]
-'''I Osman''' ({{lang-ota3|عثمان بن أرطغرل|Osmân bin Ertuğrul}}) ([[1258]], [[Sögüt, Bilecik|Sögüt]] &ndash; [[1326]], [[Bursa (il)|Bursa]]). [[Osmanlı Devleti]]niñ temelcisi ve ilk padişasıdır. Babası Ertuğrul Gazi, Annesi yada babaannesi, Hayma Ana'dır (Hayme veya Hayma Hatun).
+'''I Osman''' ({{lang-ota3|عثمان بن أرطغرل|Osmân bin Ertuğrul}}) ([[1258]], [[Sögüt, Bilecik|Sögüt]] &ndash; [[1326]], [[Bursa (il)|Bursa]]). [[Osmanlı Devleti]]niñ temelcisi ve ilk padişasıdır. Osmannıñ babası [[Ertuğrul Ğazı]], anası ya da baba anası, [[Hayma Ana]]dır (Hayme ve ya Hayma Hatun).
+
 {{Stub}}
 
 {{DEFAULTSORT:Osman 1}}
