*Empty MediaWiki Message*

--- a/B.mw
+++ b/B.mw
@@ -1,1 +1,77 @@
-B, [[Qırımtatar elifbe]]siniñ (ve şimdiki [[Latin elifbe]]siniñ) ekincisi arfidir. Yımşak bir tutuq arftir. P qattı tutuğı ozüsinden soñra bir sozuq arif kelirse B tutuqqa yımışar. [[Kiril elifbe]]siniñ üçünçisi arfidir (B) ve Latin elifbesindeki "v" sesini bere.
+B, [[Qırımtatar latin elifbesi]]niñ (ve şimdiki [[Latin elifbesi]]niñ) ekincisi arfidir. Yımşak bir tutuq arftir. P qattı tutuğı ozüsinden soñra bir sozuq arif kelirse B tutuqqa yımışar. [[Kiril elifbesi]]niñ üçünçisi arfidir (B) ve Latin elifbesindeki "v" sesini bere.
+
+{{Qırımtatar latin elifbesi}}
+
+[[Kategoriya:Arifler]]
+
+[[als:B]]
+[[ar:B]]
+[[arc:B]]
+[[ast:B]]
+[[az:B]]
+[[bat-smg:B]]
+[[br:B (lizherenn)]]
+[[bs:B]]
+[[ca:B]]
+[[co:B]]
+[[cs:B]]
+[[cy:B]]
+[[da:B]]
+[[de:B]]
+[[diq:B]]
+[[el:B]]
+[[en:B]]
+[[eo:B]]
+[[es:B]]
+[[et:B]]
+[[eu:B]]
+[[fa:B]]
+[[fi:B]]
+[[fr:B (lettre)]]
+[[fur:B]]
+[[gd:B]]
+[[gl:B]]
+[[he:B]]
+[[hr:B]]
+[[ht:B]]
+[[hu:B]]
+[[ilo:B]]
+[[io:B]]
+[[is:B]]
+[[it:B]]
+[[ja:B]]
+[[ka:B]]
+[[ko:B]]
+[[kw:B]]
+[[la:B]]
+[[lb:B]]
+[[lt:B]]
+[[lv:B]]
+[[ms:B]]
+[[nah:B]]
+[[nl:B (letter)]]
+[[nn:B]]
+[[no:B]]
+[[nrm:B]]
+[[pl:B]]
+[[pt:B]]
+[[qu:B]]
+[[ro:B]]
+[[ru:B (латиница)]]
+[[scn:B]]
+[[se:B]]
+[[simple:B]]
+[[sk:B]]
+[[sl:B]]
+[[sr:B (слово латинице)]]
+[[sv:B]]
+[[sw:B]]
+[[th:B]]
+[[tl:B]]
+[[tr:B]]
+[[uk:B (латиниця)]]
+[[vi:B]]
+[[yo:B]]
+[[zh:B]]
+[[zh-min-nan:B]]
+[[zh-yue:B]]
