--- a/B.mw
+++ b/B.mw
@@ -1,4 +1,4 @@
-B, [[Qırımtatar latin elifbesi]]niñ (ve şimdiki [[Latin elifbesi]]niñ) ekincisi arfidir. Yımşak bir tutuq arftir. P qattı tutuğı ozüsinden soñra bir sozuq arif kelirse B tutuqqa yımışar. [[Kiril elifbesi]]niñ üçünçisi arfidir (B) ve Latin elifbesindeki "v" sesini bere.
+B, [[Qırımtatar latin elifbesi]]niñ (ve şimdiki [[Latin elifbesi]]niñ) ekincisi [[arif|arfidir]]. Yımşak bir tutuq arftir. P qattı tutuğı ozüsinden soñra bir sozuq arif kelirse B tutuqqa yımışar. [[Kiril elifbesi]]niñ üçünçisi arfidir (B) ve Latin elifbesindeki "v" sesini bere.
 
 {{Qırımtatar latin elifbesi}}
 
