*Empty MediaWiki Message*

--- a/Çağatay_tili.mw
+++ b/Çağatay_tili.mw
@@ -18,7 +18,7 @@
  |ISO2 = chg
  |ISO3 = chg
 }} 
-'''Çağatay tili''' (öz adı جغتای - ''Cağatay''; {{lang-ug3|چاغاتاي|Chaghatay}}; {{lang-uz3|چاغاتاي|Chig'atoy}}) - tarihiy [[Türkiy tilleri|Türkiy]] bir tildir. Orta Asiyada Türkiy yazı tiliniñ keliştirilmesindeki üçünci devirni teşkil ete.
+'''Çağatay tili''' (öz adı جغتای - ''Cağatay''; {{lang-ug3|چاغاتاي|Chaghatay}}; {{lang-uz3|چاغاتاي|Chig'atoy}}) - tarihiy [[Türkiy tiller|Türkiy]] bir tildir. Orta Asiyada Türkiy yazı tiliniñ keliştirilmesindeki üçünci devirni teşkil ete.
 
 == Qullanuvı ==
 
