*Empty MediaWiki Message*

--- a/Uyğur_tili.mw
+++ b/Uyğur_tili.mw
@@ -33,7 +33,7 @@ Uyğurca X asırdan berli Arap elifbesinen yazılmaqtadır. 1969-1983 yılları 
 Uyğur elifbesiniñ qıyaslanması
 
 {| class="wikitable"
-|+'''Comparison of Uyghur alphabets'''
+|+'''Uyğur elifbeler qıyaslavı'''
 |-
 ! style="background:#CFCFCF;" | ''Arap''
 ! style="background:#CFCFCF;" | ''Latin''
