*Empty MediaWiki Message*

--- a/Latin_elifbesi.mw
+++ b/Latin_elifbesi.mw
@@ -1,10 +1,10 @@
-Şimdiki latin [[elifbe]]sinde, nenen [[Roman|Romans tilleri]], [[German|German tilleri]] ve çoq dıger til aileleri qullanalar, 26 arfi bardir.
+'''Latin elifbesi''' - künümizde dünyada eñ darqatılğan [[elifbe]]dir, [[Romans tilleri|Romans]], [[German tilleri|German]] ve daa pek çoq diger til ailelerine ait tiller tarafından qullanıla. Zemaneviy latin elifbesi 26 [[arif]]ten ibaret.
 
 {| class="standart"
 |-----
-! Latin arfi || Arfiniñ adı
+! Arif || Arifniñ latin adı
 | width="1" rowspan="14" | &nbsp;
-! Latin arfi || Arfiniñ adı
+! Arif || Arifniñ latin adı
 |-----
 | A a || а || N n || en
 |-----
@@ -14,23 +14,23 @@
 |-----
 | D d || de || Q q || ku
 |-----
-| E e || ye, e || R r || er
+| E e || e || R r || er
 |-----
 | F f || ef || S s || es
 |-----
-| G g || ge, je || T t || te
+| G g || ge || T t || te
 |-----
-| H h || ha, аş || U u || u
+| H h || ha || U u || u
 |-----
 | I i || i || V v || ve
 |-----
-| J j || yot, ji || W w || dubl-ve
+| J j || yot || W w || dubl ve
 |-----
 | K k || ka || X x || iks
 |-----
-| L l || el || Y y || igrek, ipsilon
+| L l || el || Y y || ipsilon
 |-----
-| M m || em || Z z || zet, zeta
+| M m || em || Z z || zet
 |}
 
 {{Latin elifbesi}}
