*Empty MediaWiki Message*

--- a/Latin_elifbesi.mw
+++ b/Latin_elifbesi.mw
@@ -1,4 +1,4 @@
-'''Latin elifbesi''' - künümizde dünyada eñ darqatılğan [[elifbe]]dir, [[Romans tilleri|Romans]], [[German tilleri|German]] ve daa pek çoq diger til ailelerine ait tiller tarafından qullanıla. Zemaneviy latin elifbesi 26 [[arif]]ten ibaret.
+'''Latin elifbesi''' - künümizde dünyada eñ ziyade darqatılğan [[elifbe]]dir, [[Romans tilleri|Romans]], [[German tilleri|German]] ve daa pek çoq diger til ailelerine ait tillerde qullanıla. Zemaneviy latin elifbesi 26 [[arif]]ten ibaret.
 
 {| class="standart"
 |-----
