--- a/Niğde_(il).mw
+++ b/Niğde_(il).mw
@@ -1,4 +1,4 @@
-[[Image:Nigde Turkey Provinces locator.jpg|300px|thumb|Niğde vilâyeti]]
+[[Image:Niğde_Turkey_Provinces_locator.jpg|300px|thumb|Niğde vilâyeti]]
 '''Niğde''' - [[Türkiye|Türkiye Cumhuriyeti]]niñ bir vilâyeti.
 
 {{Türkiyeniñ illeri}}
