--- a/Aydın_(il).mw
+++ b/Aydın_(il).mw
@@ -1,4 +1,4 @@
-[[Image:Aydin Turkey Provinces locator.jpg|300px|thumb|Aydın vilâyeti]]
+[[Image:Aydın_Turkey_Provinces_locator.jpg|300px|thumb|Aydın vilâyeti]]
 '''Aydın''' - [[Türkiye|Türkiye Cumhuriyeti]]niñ bir vilâyeti.
 
 {{Türkiyeniñ illeri}}
