*Empty MediaWiki Message*

--- a/Ç.mw
+++ b/Ç.mw
@@ -1,4 +1,4 @@
-'''Ç ç''' - Zemaneviy [[Qırımtatar latin elifbesi]]niñ dördünci [[arif|arfidir]]. Bu arif er bir [[Latin elibesi]]niñ qullanğan tiline kirmeydir. Onıñ icün Ch ([[İngiliz tili]]nde), Tsch ([[Alman tili]]nde), Cs ([[Macar tili]]nde), Cz ([[Leh tili]]nde) Τς ([[Yunan tili]]nde) kibi yazıla.
+'''Ç ç''' - Zemaneviy [[Qırımtatar latin elifbesi]]niñ dördünci [[arif|arfidir]]. Bu arif er bir [[Latin elifbesi]]niñ qullanğan tiline kirmeydir. Onıñ icün Ch ([[İngliz tili]]nde), Tsch ([[Alman tili]]nde), Cs ([[Macar tili]]nde), Cz ([[Leh tili]]nde) Τς ([[Yunan tili]]nde) kibi yazıla.
 
 {{Qırımtatar latin elifbesi}}
 
