*Empty MediaWiki Message*

--- a/Qırım-Moskova_Cenki_(1571–1572).mw
+++ b/Qırım-Moskova_Cenki_(1571–1572).mw
@@ -1,4 +1,4 @@
-'''Qırım-Rus Cenki ([[1571]] - [[1572]])''' - [[Rusiye|Rus devleti]]ni qarşı [[Qırım Hanlığı|Qırım Hanlığınıñ]] bir cenki.
+'''Qırım-Rus Cenki ([[1571]] - [[1572]])''' - [[Rusiye|Rus devleti]]ne qarşı [[Qırım Hanlığı|Qırım Hanlığınıñ]] bir cenki.
 
 [[1551]] senesinde [[I Devlet Geray]] Qırım hanı olaraq tayin etildi. Taht qavğalarını toqtatmaq içün Devlet Geray han emcesi [[I Sahib Geray|Sahib Geraynı]] ([[1532]]-[[1551]]) ve onıñ ailesini öldürdi. Qırımdaki bu qanlı vaqialardan faydalanaraq [[IV İvan]] Qorqunçlı (Groznıy) (1533-1584) çoq uzun sürgen bir quşatmadan soñra [[1552]] senesinde [[Qazan]]nı, [[1556]]-da ise [[Hacı Tarhan]]nı zapt etti. (“Qazannıñ tüşmesinden soñ [[Edil]] özeni boyunda [[X asır]]nıñ 20-nci senelerinde qurulğan bir İslâm devleti yoq etilgen oldı). 
 [[1558]]-[[1559]] senelerinde rus orduları qazaqlarnen birlikte Qırım ve [[Azaq]]qa aqın yaptı. Bu da tek Qırım ile degil [[Osmanlı Devleti]]nen dоğrudan-dоğru çatışmağa kirmek demek edi. Faqat cenkleşip Qazan ve Hacı Tarhannı keri almaq içün Qırımnıñ küçü endi yoq edi.
