*Empty MediaWiki Message*

--- a/D.mw
+++ b/D.mw
@@ -1,4 +1,4 @@
-'''D d''' - Zemaneviy [[Qırımtatar latin elifbesi]]niñ beşinci, [[Latin elifbesi]]niñ dördünci [[arif|arfidir]].
+'''D d''' - zemaneviy [[Qırımtatar latin elifbesi]]niñ beşinci, [[Latin elifbesi]]niñ dörtünci [[arif|arfidir]].
 
 {{Qırımtatar latin elifbesi}}
 
